# backtester

./: README.md  pyproject.toml  setup.py
examples/: notebook exemplos.ipynb  simple_backtest.py
forex_backtester/: __init__.py  backtester.py  strategy_generator.py
forex_backtester/strategies/: __init__.py  base.py  indicators.py
forex_backtester/utils/: __init__.py  drawdown_utils.py
futures_backtester/: __init__.py  backtester.py  strategy_generator.py
futures_backtester/utils/: __init__.py  drawdown_utils.py  metrics_utils.py  stop_utils.py
pipeline/: strategy_generator.py
