[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futures_backtester"
version = "0.1.0"
authors = [
    {name = "Renato Critelli", email = "renato.critelli.ifusp@gmail.com"}
]
description = "Framework para backtesting de estratégias sistemáticas de trading"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pyarrow",
    "numba"
]

[project.urls]
"Homepage" = "https://github.com/username/futures_backtester"
"Bug Tracker" = "https://github.com/username/futures_backtester/issues"